Changelog
=========


1.0.1 (unreleased)
------------------

- Increased lengths for `userid` and `groupid` columns to 255.
  [lgraf]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]


1.0 (2011-11-17)
----------------

- Final release
  [phgross]


1.0a2 (2011-10-04)
------------------

- added manifest.in


1.0a1 (2011-09-29)
------------------

* Initial release